sjengida/g1/search
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/search/src/search.c:1155:24: error: use of undeclared identifier 'rc_index_0'
if ( captured != 13 && rc_index_0[captured] == rc_index_0[path[v13 - 2].captured] ) 
                       ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/search/src/search.c:1155:48: error: use of undeclared identifier 'rc_index_0'
if ( captured != 13 && rc_index_0[captured] == rc_index_0[path[v13 - 2].captured] ) 
                                               ^
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/search/src/search.c:1712:7: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v57[1].m128i_i64[0] = v57[v58 + 1 + v59].m128i_i64[0]; 
~~~~~~^~~~~~~~~~
/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/search/src/search.c:1712:41: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
v57[1].m128i_i64[0] = v57[v58 + 1 + v59].m128i_i64[0]; 
                      ~~~~~~~~~~~~~~~~~~^~~~~~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O1/sjeng-gcc-O1/search/src/obj/search.o] Error 1
